# lox-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: lox.py  scanner.py  token_.py  token_type.py
src/utils/: __init__.py  utils.py
